--- a/htmless.html
+++ b/htmless.html
@@ -1,15 +1,22 @@
 <html>
 <head>
 	<title></title>
+	<!-- global_name_space -->
 	@htmless {
+		<!-- global variable -->
 		@user {
 			value = width:100px;height:200px;
 			attr = true
+			number = 123123
+			@name_space {
+				value = @user.value
+			}
 			name
 				<!-- 
 					<div class="hello class" id="name" style="width:100px;height:200px;" data-value='true'>
 						<div>this is child <br /> </div>
 						<input />
+						<br />
 					</div>
 					</body>
 					</html>
@@ -18,25 +25,54 @@
 					div
 						this is child text !!!!
 						br
-					!input <!-- single tag -->
-				!body <!-- single tag -->
+					input
+					br
+				!body <!-- closing tag -->
 				!html
-				
-			template
 			tag
 				section .nav #nav (style, @value) (name, 'myname')
 				<!--
 					<section class="nav" id="nav" name="myname"></section> 
 				 -->
+			<!-- not compiled content -->
+			pure::
+				<html>
+				<head>
+					<title>hello this is html</title>
+				</head>
+				<body>
+				
+				</body>
+				</html>
+			<!-- jade template content -->
+			<!-- not compiled content -->
+			template::
+				div#foo.bar.baz
+				div.user-details
+				p
+				  | foo bar baz
+				  | rawr rawr
+				  | super cool
+				  | go jade go
+
 		}
-		@index = 'this is index'
+		index = 'this is index'
 	}
-	@@source = ./htmless/external.hl
+	@source {
+		./htmless/external.hl
+	}
 </head>
 <body>
+	<!-- global_name_space -->
+	@htmless {
+		<!-- variable override -->
+		@index {
+			scrib = this is a name space
+		}
+	}
 	<div>
-		@user.name
-		@user.tag[value = @index, style = "top:0;"]
+		{@user.name*5}
+		{@user.tag[value = @index, style = @user.name_space.value]*2}
 	</div>
 	<div>@index</div>
 </body>
